46
================

02/06/22 Fix insurance not hiding from movements correctly when set to remove
02/06/22 Allow media to be moved to other animal/person records #822
01/06/22 Handle thumbnails for youtube.com/shorts URL format
01/06/22 Limit microchip fields to 15 chars
01/06/22 Implement "remember me" for mobile login #1096
23/05/22 Option to set the starting display of media tabs to table mode
21/05/22 Don't suggest state if city is blank
20/05/22 Updated Hebrew Translation (Saggi Neuemann)
20/05/22 Updated Swedish Translation (Carina Lekare)
17/05/22 Fix unicode bug when creating CSV files from publishers #1134
14/05/22 Audit and store auto-deleted online forms in the deletion log
14/05/22 Allow 15 slots for custom animal emblems (increase from 10)
12/05/22 Mobile login rewritten, fleshing out of new mobile interface #1096
11/05/22 csvimport: support ANIMALCOATTYPE (Peter Van Caeseele) #1132
10/05/22 Fix bug in medical regimens removing default values on load
09/05/22 Add cost per treatment for medical regimens/profiles #1095
06/05/22 Left align online form checkboxes on mobile
05/05/22 import PayPal CSV: allow payment type to be set per transaction #963
04/05/22 No longer hide the person field for TNR/Release movements 
04/05/22 Regimen edits are now audited correctly #1129
04/05/22 Fix smartquote replacement to use unicode rather than HTML entities
03/05/22 Do not allow ES01/2 log messages to be edited #1094
27/04/22 csvimport: support declawed and special needs (Peter Van Caeseele)
27/04/22 SavourLife: Fix bug with updating held status
25/04/22 csvimport: Support person image/PDF (Peter Van Caeseele) #1126
25/04/22 Allow future dates in vacc/test give dialogs again due to outcry
22/04/22 Query builder: Animal date of birth between two dates criteria
22/04/22 Animal find: filter option for heartworm negative
21/04/22 Tweak Peter's patch to split lost/found and support additional fields #648