@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "46u [Thu  2 Jun 09:26:33 BST 2022]"
-BUILD = "06020926"
+VERSION = "46u [Sun  5 Jun 11:38:43 BST 2022]"
+BUILD = "06051138"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
